# AI-ML-Methodology

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUAL_MODE_GUIDE.md  MIT License  MODEL_CARD.md  README.md  REQUIREMENTS.txt  kaggle_notebook.ipynb  main  main.py  pyproject.toml
.github/workflows/: ci.yml
ai_ml_methodology/: __init__.py  data.py  data_sources.py  model.py  train.py  utils.py
tests/: test_main.py
